2017-04-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (enter): testing with StaticImage.
	* ext/librlgl: updated to head.

	* src/client/AnimatedImage.cpp (AnimatedImage): prerender all images
	in goemetry buffer vector.

	* src/client/AnimatedImage.cpp (updateSelf): implement update callback.

2017-04-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/AnimatedImage.cpp (debug): add a logging function to
	know why the image drawing isn't working.

	* src/client/AnimatedImage.cpp (AnimatedImage): resize the image
	vector fix a segfault.

2017-04-05  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/AnimatedImage.cpp (drawSelf): start to implement the
	drawing.
	* src/client/AnimatedImage.hpp (AnimatedImage): start a new class.
	* src/client/LocalTest.hpp (_LOCAL_TEST_HPP_): fix a typo in guards.

2017-04-04  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (addWorld): add an helper function.
	* src/client/LocalTest.hpp (lbWorlds): add a global pointer to
	existing worlds listbox.

	* src/client/LocalTest.cpp (onSelectionChange): call check() to
	update Play button.
	* src/client/LocalTest.cpp (check): add a selection brush image.

2017-04-03  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp (check): add a list box item.

	* src/client/LocalTest.cpp (check): finished the new world tab
	validation.

	* src/client/LocalTest.cpp (check): implement the basic layout.

	* src/client/LocalTest.cpp (keyPressed): override GameState function
	to call check().
	* src/client/LocalTest.hpp (check): enw function to test if we need
	to enable Play button.

2017-04-02  Jérôme Pasquier  <rainbru@free.fr>

	* README.md: add buidl instructions using git submodule.

	* CMakeLists.txt (rainbrurpg-tests): add librlgl to
	target_link_libraries rule.
	* CMakeLists.txt (rainbrurpg-client): add librlgl to
	target_link_libraries rule.
	* src/client/LocalTest.cpp (randomSeed): uses RLGL::Seed to get
	a random seed.